cabal-version:      3.0
name:               battleship
version:            0.1.0.0
license:            MIT

library
    exposed-modules:  Game
                    , TextUI
    build-depends:    base ^>=4.18.2.0
                    , containers
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall -threaded

executable battleship
    main-is:          Main.hs
    other-modules:    Game
                    , TextUI
    build-depends:    base ^>=4.18.2.0
                    , containers
                    , battleship
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall -threaded

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    other-modules:    Game
    build-depends:    base ^>=4.18.2.0
                    , containers
                    , HUnit
                    , battleship
    hs-source-dirs:   src
                    , test
    default-language: GHC2021
    ghc-options:      -Wall -threaded
